[package]
name = "img2kvm-rs"
version = "0.2.0"
edition = "2021"
description = "A utility that convert disk image in Proxmox VE. Supported PC x86_64."

[[bin]]
name = "img2kvm"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.99"
bzip2 = "0.6.0"
clap = { version = "4.5", features = ["derive"] }
dunce = "1.0"
flate2 = "1.1"
lzma-rust2 = "0.13"
once_cell = "1.21"
zip = "4.6"
